--- a/apps/service.yaml
+++ b/apps/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: httpd-service
+  namespace: apps
 spec:
   selector:
     app.kubernetes.io/name: httpd
